--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -44,13 +44,18 @@
    "source": [
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
     "\n",
-    "cluster_name = \"GIVE_A_CLUSTER_NAME\"\n",
+    "cluster_name = \"project1-compute-pipeline\"\n",
     "\n",
     "# TODO: Create compute cluster\n",
     "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
     "# max_nodes should be no greater than 4.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
+    "                                                              max_nodes=4)\n",
+    "cluster = ComputeTarget.create(ws, cluster_name, config)\n",
+    "\n",
+    "cluster.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -83,10 +88,14 @@
     "import os\n",
     "\n",
     "# Specify parameter sampler\n",
-    "ps = ### YOUR CODE HERE ###\n",
+    "ps = RandomParameterSampling( {\n",
+    "        \"C\": uniform(0.5, 5),\n",
+    "        \"max_iter\": choice(10,100,1000,10000)\n",
+    "    }\n",
+    ")\n",
     "\n",
     "# Specify a Policy\n",
-    "policy = ### YOUR CODE HERE ###\n",
+    "policy = BanditPolicy(slack_factor = 0.2, delay_evaluation = 3, evaluation_interval = 1)\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
@@ -95,10 +104,19 @@
     "sklearn_env = Environment.from_conda_specification(name='sklearn-env', file_path='conda_dependencies.yml')\n",
     "\n",
     "# Create a ScriptRunConfig Object to specify the configuration details of your training job\n",
-    "src = ### YOUR CODE HERE ###\n",
+    "src = ScriptRunConfig(source_directory='.',\n",
+    "                            script='train.py',\n",
+    "                            arguments=['--C', 10, '--max_iter', 1],\n",
+    "                            compute_target=cluster,\n",
+    "                            environment=sklearn_env)\n",
     "\n",
     "# Create a HyperDriveConfig using the src object, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = ### YOUR CODE HERE ###"
+    "hyperdrive_config = HyperDriveConfig(run_config=src,\n",
+    "                    hyperparameter_sampling=ps,\n",
+    "                    policy=policy,\n",
+    "                    primary_metric_name='validation_acc',\n",
+    "                    primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
+    "                    max_total_runs=5)"
    ]
   },
   {
@@ -109,7 +127,9 @@
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "hyperdrive_run = exp.submit(config=hyperdrive_config, show_output=True)\n",
+    "RunDetails(hyperdrive_run).show()\n",
+    "run.wait_for_completion(show_output=True)\n"
    ]
   },
   {
@@ -132,9 +152,23 @@
    "outputs": [],
    "source": [
     "import joblib\n",
+    "from azureml.core.model import Model\n",
     "# Get your best run and save the model from that run.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
+    "best_run_metrics = best_run.get_metrics()\n",
+    "parameter_values = best_run.get_details()['runDefinition']['Arguments']\n",
+    "\n",
+    "print(best_run)\n",
+    "print('Best Run Id: ', best_run.id)\n",
+    "print('\\n Accuracy:', best_run_metrics['accuracy'])\n",
+    "print('\\n C:',parameter_values[3])\n",
+    "print('\\n max_iter:',parameter_values[5])\n",
+    "\n",
+    "#????\n",
+    "#joblib.dump(best_run, 'HyperTuning_best_logistic_regression')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -149,7 +183,8 @@
     "# Data is available at: \n",
     "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "datastore = Datastore.get(workspace, 'automlsamplenotebooksdata')\n",
+    "ds = Dataset.Tabular.from_delimited_files(path=(datastore, 'automl-sample-notebook-data/bankmarketing_train.csv'))\n"
    ]
   },
   {
@@ -174,7 +209,7 @@
     "from train import clean_data\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
+    "x, y = clean_data(ds)"
    ]
   },
   {
@@ -202,13 +237,18 @@
     "# NOTE: DO NOT CHANGE THE experiment_timeout_minutes PARAMETER OR YOUR INSTANCE WILL TIME OUT.\n",
     "# If you wish to run the experiment longer, you will need to run this notebook in your own\n",
     "# Azure tenant, which will incur personal costs.\n",
+    "\n",
+    "x['y'] = y\n",
+    "\n",
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
-    "    task=,\n",
-    "    primary_metric=,\n",
-    "    training_data=,\n",
-    "    label_column_name=,\n",
-    "    n_cross_validations=)"
+    "    task='classification',\n",
+    "    primary_metric='AUC_weighted',\n",
+    "    training_data=x,\n",
+    "    label_column_name='y',\n",
+    "    n_cross_validations=3)\n",
+    "\n",
+    "#label_column_name?\n"
    ]
   },
   {
@@ -229,7 +269,10 @@
    "source": [
     "# Submit your automl run\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "experiment = Experiment(ws, \"automl_logistic_regression\")\n",
+    "automl_run = experiment.submit(config=automl_config, show_output=True)\n",
+    "\n",
+    "RunDetails(automl_run).show()\n"
    ]
   },
   {
@@ -240,7 +283,11 @@
    "source": [
     "# Retrieve and save your best automl model.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "best_run_automl, fitted_model_automl = automl_run.get_output()\n",
+    "print(best_run_automl)\n",
+    "print(fitted_model_automl)\n",
+    "\n",
+    "joblib.dump(best_run_automl, 'AutoML_best_logistic_regression')"
    ]
   }
  ],
@@ -249,7 +296,7 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.1 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -263,10 +310,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.1"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ab59da911a044be520a01dfc308f0f11900ed7fa52809087f13f9457ec5d26d6"
+   }
   }
  },
  "nbformat": 4,
