--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "### YOUR CODE HERE ###\n",
     "config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
-    "                                                              max_nodes=4)\n",
+    "                                                              max_nodes=4, min_nodes=1)\n",
     "cluster = ComputeTarget.create(ws, cluster_name, config)\n",
     "\n",
     "cluster.wait_for_completion(show_output=True)"
@@ -89,8 +89,8 @@
     "\n",
     "# Specify parameter sampler\n",
     "ps = RandomParameterSampling( {\n",
-    "        \"C\": uniform(0.5, 5),\n",
-    "        \"max_iter\": choice(10,100,1000,10000)\n",
+    "        \"C\": uniform(0.5, 10),\n",
+    "        \"max_iter\": choice(10,50,100)\n",
     "    }\n",
     ")\n",
     "\n",
@@ -106,9 +106,11 @@
     "# Create a ScriptRunConfig Object to specify the configuration details of your training job\n",
     "src = ScriptRunConfig(source_directory='.',\n",
     "                            script='train.py',\n",
-    "                            arguments=['--C', 10, '--max_iter', 1],\n",
+    "                            arguments=['--C', 5, '--max_iter', 100],\n",
     "                            compute_target=cluster,\n",
     "                            environment=sklearn_env)\n",
+    "\n",
+    "script_run_config.run_config.target = cluster\n",
     "\n",
     "# Create a HyperDriveConfig using the src object, hyperparameter sampler, and policy.\n",
     "hyperdrive_config = HyperDriveConfig(run_config=src,\n",
@@ -183,8 +185,9 @@
     "# Data is available at: \n",
     "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "\n",
-    "datastore = Datastore.get(workspace, 'automlsamplenotebooksdata')\n",
-    "ds = Dataset.Tabular.from_delimited_files(path=(datastore, 'automl-sample-notebook-data/bankmarketing_train.csv'))\n"
+    "web_path = \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
+    "ds = Dataset.Tabular.from_delimited_files(path=web_path)\n",
+    "\n"
    ]
   },
   {
