--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -51,11 +51,15 @@
     "# max_nodes should be no greater than 4.\n",
     "\n",
     "### YOUR CODE HERE ###\n",
-    "config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
-    "                                                              max_nodes=4, min_nodes=1)\n",
-    "cluster = ComputeTarget.create(ws, cluster_name, config)\n",
+    "try:\n",
+    "    compute_target = ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "    print('found existing cluster')\n",
+    "except ComputeTargetException:\n",
+    "    config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
+    "                                                              max_nodes=4)\n",
+    "    compute_target = ComputeTarget.create(ws, cluster_name, config)\n",
     "\n",
-    "cluster.wait_for_completion(show_output=True)"
+    "cluster.wait_for_completion(show_output=True, min_node_count=1, timeout_in_minutes=20)"
    ]
   },
   {
@@ -89,8 +93,8 @@
     "\n",
     "# Specify parameter sampler\n",
     "ps = RandomParameterSampling( {\n",
-    "        \"C\": uniform(0.5, 10),\n",
-    "        \"max_iter\": choice(10,50,100)\n",
+    "        \"C\": uniform(0.5, 2),\n",
+    "        \"max_iter\": choice(10,20,50,100)\n",
     "    }\n",
     ")\n",
     "\n",
@@ -104,13 +108,15 @@
     "sklearn_env = Environment.from_conda_specification(name='sklearn-env', file_path='conda_dependencies.yml')\n",
     "\n",
     "# Create a ScriptRunConfig Object to specify the configuration details of your training job\n",
+    "\n",
+    "#cpu_cluster = ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "\n",
     "src = ScriptRunConfig(source_directory='.',\n",
     "                            script='train.py',\n",
-    "                            arguments=['--C', 5, '--max_iter', 100],\n",
-    "                            compute_target=cluster,\n",
+    "                            #arguments=['--C', 10, '--max_iter', 100],\n",
+    "                            compute_target=compute_target,\n",
     "                            environment=sklearn_env)\n",
     "\n",
-    "script_run_config.run_config.target = cluster\n",
     "\n",
     "# Create a HyperDriveConfig using the src object, hyperparameter sampler, and policy.\n",
     "hyperdrive_config = HyperDriveConfig(run_config=src,\n",
@@ -244,14 +250,15 @@
     "x['y'] = y\n",
     "\n",
     "automl_config = AutoMLConfig(\n",
+    "    compute_target=compute_target,\n",
     "    experiment_timeout_minutes=30,\n",
     "    task='classification',\n",
     "    primary_metric='AUC_weighted',\n",
     "    training_data=x,\n",
     "    label_column_name='y',\n",
-    "    n_cross_validations=3)\n",
-    "\n",
-    "#label_column_name?\n"
+    "    n_cross_validations=3,\n",
+    "    enable_early_stopping = True)\n",
+    "\n"
    ]
   },
   {
