--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -173,8 +173,8 @@
     "print('\\n C:',parameter_values[3])\n",
     "print('\\n max_iter:',parameter_values[5])\n",
     "\n",
-    "#????\n",
-    "#joblib.dump(best_run, 'HyperTuning_best_logistic_regression')\n",
+    "\n",
+    "joblib.dump(best_run, 'HyperTuning_best_logistic_regression')\n",
     "\n",
     "\n"
    ]
@@ -193,7 +193,11 @@
     "\n",
     "web_path = \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "ds = Dataset.Tabular.from_delimited_files(path=web_path)\n",
-    "\n"
+    "\n",
+    "# Register Dataset in Workspace\n",
+    "dataset = dataset.register(workspace=ws, name = 'Bankdata', description = 'This dataset contains personal data about bank customers that are part of a bankmarketing compain.')\n",
+    "df = dataset.to_pandas_dataframe()\n",
+    "df.describe()\n"
    ]
   },
   {
@@ -218,7 +222,9 @@
     "from train import clean_data\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(ds)"
+    "x, y = clean_data(ds)\n",
+    "\n",
+    "print(x.head())"
    ]
   },
   {
