--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -20,7 +20,7 @@
     "      'Subscription id: ' + ws.subscription_id, \n",
     "      'Resource group: ' + ws.resource_group, sep = '\\n')\n",
     "\n",
-    "run = exp.start_logging()"
+    "#run = exp.start_logging()"
    ]
   },
   {
@@ -93,13 +93,13 @@
     "\n",
     "# Specify parameter sampler\n",
     "ps = RandomParameterSampling( {\n",
-    "        \"C\": uniform(0.5, 2),\n",
-    "        \"max_iter\": choice(10,20,50,100)\n",
+    "        \"C\": uniform(0.2, 2),\n",
+    "        \"max_iter\": choice(10,20,50,80,100,150)\n",
     "    }\n",
     ")\n",
     "\n",
     "# Specify a Policy\n",
-    "policy = BanditPolicy(slack_factor = 0.2, delay_evaluation = 3, evaluation_interval = 1)\n",
+    "policy = BanditPolicy(slack_factor = 0.1, delay_evaluation = 5, evaluation_interval = 1)\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
@@ -122,9 +122,9 @@
     "hyperdrive_config = HyperDriveConfig(run_config=src,\n",
     "                    hyperparameter_sampling=ps,\n",
     "                    policy=policy,\n",
-    "                    primary_metric_name='validation_acc',\n",
+    "                    primary_metric_name='Accuracy',\n",
     "                    primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
-    "                    max_total_runs=5)"
+    "                    max_total_runs=10)"
    ]
   },
   {
@@ -159,22 +159,21 @@
    },
    "outputs": [],
    "source": [
-    "import joblib\n",
     "from azureml.core.model import Model\n",
     "# Get your best run and save the model from that run.\n",
     "\n",
     "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
     "best_run_metrics = best_run.get_metrics()\n",
-    "parameter_values = best_run.get_details()['runDefinition']['Arguments']\n",
+    "parameter_values = best_run.get_details()['runDefinition']['arguments']\n",
     "\n",
     "print(best_run)\n",
     "print('Best Run Id: ', best_run.id)\n",
-    "print('\\n Accuracy:', best_run_metrics['accuracy'])\n",
-    "print('\\n C:',parameter_values[3])\n",
-    "print('\\n max_iter:',parameter_values[5])\n",
+    "print('\\n Accuracy:', best_run_metrics['Accuracy'])\n",
+    "print('\\n C:',parameter_values[1])\n",
+    "print('\\n max_iter:',parameter_values[3])\n",
     "\n",
     "\n",
-    "joblib.dump(best_run, 'HyperTuning_best_logistic_regression')\n",
+    "best_run.register_model(best_run.id)\n",
     "\n",
     "\n"
    ]
@@ -254,13 +253,21 @@
     "# Azure tenant, which will incur personal costs.\n",
     "\n",
     "x['y'] = y\n",
+    "datastore = ws.get_default_datastore()\n",
+    "\n",
+    "ds_cleaned = Dataset.Tabular.register_pandas_dataframe(\n",
+    "    dataframe = x,\n",
+    "    name = 'Bankdata cleaned',\n",
+    "    description = 'Cleaned bankink dataset with label y',\n",
+    "    target = datastore\n",
+    ")\n",
     "\n",
     "automl_config = AutoMLConfig(\n",
     "    compute_target=compute_target,\n",
     "    experiment_timeout_minutes=30,\n",
     "    task='classification',\n",
     "    primary_metric='AUC_weighted',\n",
-    "    training_data=x,\n",
+    "    training_data=ds_cleaned,\n",
     "    label_column_name='y',\n",
     "    n_cross_validations=3,\n",
     "    enable_early_stopping = True)\n",
@@ -303,7 +310,19 @@
     "print(best_run_automl)\n",
     "print(fitted_model_automl)\n",
     "\n",
-    "joblib.dump(best_run_automl, 'AutoML_best_logistic_regression')"
+    "automl_run.register_model(model_name='best_model_automl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Delete compute cluster\n",
+    "cluster = ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "cluster.delete()\n",
+    "cluster.wait_for_completion(show_output=True)"
    ]
   }
  ],
